Make space ID optional on storage reports
